Bug 417491 - Element.setAttribute(':', ...) throws DOMException INVALID_CHARACTER_ERR.  r+sr=peterv, a=beltzner